# Store-Backend-Service

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  main.yml
app/: main.py
app/models/: auth.py  order.py  product.py
app/repositories/: order_repository.py  product_repository.py  user_repository.py
app/routers/: __init__.py  auth.py  orders.py  products.py
app/services/: auth_dependencies.py  auth_service.py  container.py  firestore_client.py  jwt_service.py  order_service.py  product_service.py  settings.py
docs/: README.md  agent-playbook.md  api-contract.md  backend-architecture.md  conventions.md  infrastructure-terraform.md  local-development.md  project-overview.md  testing-and-quality.md  troubleshooting.md
terraform/: README.md  apis.tf  artifact_registry.tf  backend.tf  cloud_run.tf  iam.tf  locals.tf  outputs.tf  variables.tf
terraform/envs/: dev.tfvars
tests/: demo_error_scenarios.ipynb  demo_happy_path.ipynb  test_jwt_service.py  test_product_service.py
tests/integration/: test_api_flow.py
